--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
   </head>
+  <%- include('../partials/navStyle') %>
   <body class="bg-gray-100 min-h-screen flex flex-col">
     <!-- Header -->
     <%- include('../partials/header') %>
