--- a/views/host/add-home.ejs
+++ b/views/host/add-home.ejs
@@ -37,6 +37,7 @@
         box-shadow: 0 15px 35px rgba(255, 56, 92, 0.3);
       }
     </style>
+    <%- include('../partials/navStyle') %>
   </head>
 
   <body class="min-h-screen gradient-bg">
