--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <%- include('../partials/navStyle') %>
   </head>
   <body class="bg-gray-100 min-h-screen flex flex-col">
     <%- include('../partials/header') %>
