--- a/views/favourite.ejs
+++ b/views/favourite.ejs
@@ -8,17 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <style>
-      .card {
-        width: 300px; /* Adjust as needed */
-      }
-
-      .view-details a,
-      .hide-details a {
-        display: block;
-        text-align: center;
-      }
-    </style>
+    <%- include('./partials/navStyle') %>
   </head>
   <body class="bg-gray-100 h-screen flex flex-col">
     <%- include('./partials/header') %>
