--- a/views/host/editHostHomes.ejs
+++ b/views/host/editHostHomes.ejs
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <%- include('../partials/navStyle') %>
   </head>
 
   <body class="bg-gray-100 h-screen flex flex-col">
