--- a/views/host/host-homes.ejs
+++ b/views/host/host-homes.ejs
@@ -7,6 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <%- include('../partials/navStyle') %>
   </head>
   <body class="bg-gray-100 min-h-screen">
     <%- include('../partials/header') %>
