house rules commented

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -146,7 +146,7 @@
             </p>
           </div>
 
-          <div class="mt-4">
+          <!-- <div class="mt-4">
             <a
               href="/rules/<%= home._id %>"
               class="inline-flex items-center text-blue-600 hover:text-blue-800"
@@ -166,7 +166,7 @@
               </svg>
               Download House Rules
             </a>
-          </div>
+          </div> -->
 
           <!-- Details Grid -->
           <div
